--- a/subitupntest.nikitha.ml/index.html
+++ b/subitupntest.nikitha.ml/index.html
@@ -131,7 +131,7 @@ body {
   <a href="#" class="active">Home</a>
   <a href="#">Link</a>
   <a href="#">Link</a>
-  <a href="#" class="right">Link</a>
+  <a href="#" class="right">Link to</a>
 </div>
 
 <div class="row">
