--- a/subitupntest.nikitha.ml/index.html
+++ b/subitupntest.nikitha.ml/index.html
@@ -124,7 +124,7 @@ body {
 
 <div class="header">
   <h1>Hai.....Welcome to test page</h1>
-  <p>A <b>responsive</b> East Us website created by nikitha.</p>
+  <p>A <b>responsive</b> Indian website created by nikitha.</p>
 </div>
 
 <div class="navbar">
